Fix all shim compile errors (100% clean), update docs for Android app transparency
- Fix 1,968 Java shim files to compile with 0 errors (was ~413 errors across 177 files)
- Rebuild View→ViewGroup→widget class hierarchy with proper extends chains
- Add OHBridge native handle, layout constants, and constructors to View/ViewGroup
- Fix corrupted generics from T→Object replacement (ArraySet, LayoutParams, etc.)
- Convert abstract method declarations to stubs, add missing override implementations
- Remove duplicate constructors from 25 files
- Add fix scripts: fix_all.py, fix_constructors.py, fix_final.py, fix_last.py, etc.
- Update docs: README, DALVIK-PORT, DALVIK-ON-OHOS, SHIM-INDEX with latest status
- Document Android app transparency: full Activity lifecycle on x86_64, aarch64, ARM32

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>